Partial fix for alignment of theme summary and story list

--- a/app/assets/stylesheets/themes.css.scss
+++ b/app/assets/stylesheets/themes.css.scss
@@ -5,14 +5,15 @@
 // make theme_image a fixed size? 
 
 #theme-image {
-	min-width: 320px;
-	max-width: 500px;
-	float: left;
+	//min-width: 320px;
+	//max-width: 500px;
+	width: 500px;
+	//float: left;
 }
 
 #theme-summary {
-	padding: 10px;
-	min-width: 200px;
+	//padding: 10px;
+	//min-width: 200px;
 }
 
 #theme-map {
